# chatbot

./: .gitignore  README.md  pyproject.toml  smart_db_setup.py
src/: .env  api.py  chatbot.py
src/app/database/: create_table.py  db.py  load_bd_profiles.py  profiles_migration.py  test_db.py
src/app/models/: profile.py
src/app/routers/: chat.py  profile.py  web.py
src/app/schemas/: __init__.py  chat.py  profile.py
src/app/services/: chatbot.py
src/app/utils/: auth.py  llm_interface.py  load_profiles.py
src/profiles/: joao.json  luis.json  mafalda.json  ruben.json
tests/: test_schemas_profile.py
